what exactly and actually happened 32nd session/12.txt
Now let me verify the syntax is correct:
Action: $ cd /app && node -c "Lichess Bot-AlphaZero-Pure.user.js" 2>&1
Observation: /app/Lichess Bot-AlphaZero-Pure.user.js:18761
}
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v20.19.5
Exit code: 1